[package]
name = "arch-olde"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"
env_logger = { version = "0", features = [] }
gethostname = "1"
log = { version = "0", features = [] }
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "2"
vercomp = "0.5.0"
